Bug Fix
When having a popout of a somebodys profile the background looks odd now its fixed

--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -2,7 +2,7 @@
 	display:none;
 }
 :root {
-    --version-content: "1.39";
+    --version-content: "1.40";
 }
 /* Version Displayed */
 .account:after {content: var(--version-content); color: rgba(255,255,255,0.2); font-size: 11px; font-weight: bold; position: absolute; bottom: 0; left: 149px; right: 0; opacity: 1;
@@ -2498,4 +2498,12 @@ div.platform-osx .theme-light+span .user-settings-modal .tab-bar.SIDE .tab-bar-i
 .CodeMirror-gutters {
     border-right: 1px solid #19191b;
     background-color: #141417;
+}
+.channel-members .member.popout-open .avatar-small {
+    margin-left: -14px;
+}
+.theme-dark .channel-members .member.popout-open {
+    margin-left: 14px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
 }
